--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,18 +1,23 @@
-.test {
-    height: 100vh;
-    width: 100vw;
-    background: rgb(107, 195, 201);
-    .test1 {
-        background-color: yellow;
-        height: 100px;
-        width: 100px;
-    }
-    .test2 {
-        background-color: green;
-        height: 100px;
-        width: 100px;
-    }
-    .test3 {
-        background-color: blue;
-    }
+//設定字體
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display");
+
+*, *:before, *:after {
+  font-family: "Playfair Display", "微軟正黑體";
+  position: relative;
+
+  // border: solid 2px black
+  // background-color: #fff
 }
+
+$colorBlueRoofLight: #6fc5ff;
+$colorBlueRoofDark: #0058ff;
+
+$colorGreyLight: #fafaf5;
+$colorGreyNormal: #e3e2cf;
+$colorGreyDark: #bebdaf;
+$colorBackground: #2C2F36;
+
+$colorShadowBlue: #7cb1ff;
+$colorShadowBlueLight: #8dc9fc;
+
+$colorWindowGrey: #534d4d;
