--- a/jade/index.jade
+++ b/jade/index.jade
@@ -5,8 +5,11 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         link(rel="stylesheet", href="css/style.css")
-        title learn gulp
+        title 城市插画
     body
-        .test
+        .test hello world 你好世界
+        input(type="checkbox", name="")
+        h1 我来了
+
         
 
