- html文字部分完成 - 开始图形部分

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -7,9 +7,11 @@ html(lang="en")
         link(rel="stylesheet", href="css/style.css")
         title 城市插画
     body
-        .test hello world 你好世界
-        input(type="checkbox", name="")
-        h1 我来了
+        .scene
+            .lefttopText
+                h5 A DAY<br>ON THE ISLAND
+                h2 Aegean Sea<br>Night Sky
+                p 崔磊
 
         
 
