-建筑结构完成 -开始上色

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -9,9 +9,26 @@ html(lang="en")
     body
         .scene
             .lefttopText
+                .blueblock
                 h5 A DAY<br>ON THE ISLAND
-                h2 Aegean Sea<br>Night Sky
-                p 崔磊
-
-        
+                h1 Aegean Sea<br>Night Sky
+                p cuilei's project
+            .building
+                .house1
+                    .window
+                        .circle
+                        .circle
+                        .circle
+                .house2
+                    .door
+                .house3
+                    .wall
+                        .window
+                    .wall
+                        .window
+                    .wall
+                        .window
+                    .roof
+                        .rooftop
+                            .cross
 
