--- a/sass/style.sass
+++ b/sass/style.sass
@@ -42,33 +42,156 @@ $sceneGradient: linear-gradient(#1D2B49, #1A45A0, #91cdff, #fff)
     top: $t
 
 //網頁設定撐滿內容放中央
-html,body
+html, body
     +flex
     +size(100%)
 
     background-color: $colorBackground
     color: white
     margin: 0
+    position: relative
 
 .scene
     +size(700px, 500px, 15px)
 
     .lefttopText
-        margin: 
+        margin:
             left: 30px
             top: 30px
 
+        h1
+            font-size: 36px
+            letter-spacing: 3px
+            margin-top: 0
+            font-weight: 300
 
+        h5
+            font-size: 14px
+            letter-spacing: 1px
+            opacity: 0.6
+            margin-bottom: 0
+            font-weight: 300
 
+        p
+            font-size: 14px
+            line-height: 24px
+            letter-spacing: 2px
+            opacity: 0.6
 
+        .blueblock
+            +size(20px, 25px)
 
+    .building
+        position: absolute
+        right: 0
+        bottom: 0
+        transform: scale(0.95)
 
+        [class^='house']
+            position: absolute
+            bottom: 0
+            right: 0
 
+        .house1
+            +size(180px)
 
+            .window
+                +size(40px, 100px, 20px)
 
+                margin-top: 40px
+                margin-left: 70px
 
+                +flex
 
+                flex-direction: column
 
+                .circle
+                    +size(20px, 20px, 50%)
+
+                    margin: 4px
+
+        .house2
+            +size(240px, 170px)
+
+            right: 130px
+
+            .door
+                +size(40px, 80px, 20px 20px 0 0)
+
+                position: absolute
+                bottom: 0
+                left: 45px
+
+        .house3
+            +size(320px, 300px)
+            +flex
+
+            .wall
+                height: 100%
+                flex: 1
+
+                +flex(center, flex-start)
+
+                .window
+                    +size(24px, 50px, 12px 12px 0 0)
+
+                    margin-top: 30px
+
+                &:before
+                    content: ""
+                    display: block
+                    position: absolute
+                    border: 2px solid #000
+                    left: 50%
+                    transform: translateX(-50%)
+
+                    +size(120%, 20px)
+
+                    top: -20px
+
+                =wall($flex)
+                    flex: $flex
+
+                &:nth-child(1)
+                    +wall(10)
+
+                &:nth-child(2)
+                    +wall(14)
+
+                &:nth-child(3)
+                    +wall(10)
+
+            .roof
+                =halfCir($r)
+                    +size($r * 2, $r, $r $r 0 0)
+
+                +halfCir(150px)
+
+                position: absolute
+                top: -170px
+
+                .rooftop
+                    +halfCir(14px)
+                    +abpos(50%, -14px)
+
+                    transform: translateX(-50%)
+
+                    .cross
+                        +size(4px, 30px)
+
+                        position: absolute
+                        left: 50%
+                        transform: translateX(-50%)
+                        bottom: 10px
+
+                        &:before
+                            content: ""
+                            display: block
+                            +size(20px, 4px)
+                            position: absolute
+                            left: 50%
+                            transform: translateX(-50%)
+                            bottom: 15px
 
 input:checked + h1
     margin-left: 500px
