-颜色完成 -星星🌟动画完成 -开始白天和黑天切换

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -13,6 +13,37 @@ html(lang="en")
                 h5 A DAY<br>ON THE ISLAND
                 h1 Aegean Sea<br>Night Sky
                 p cuilei's project
+            .allstars
+                .star1
+                .star2
+                .star3
+                .star4
+                .star5
+                .star6
+                .star7
+                .star8
+                .star9
+                .star10
+                .star11
+                .star12
+                .star13
+                .star14
+                .star15
+                .star16
+                .star17
+                .star18
+                .star19
+                .star20
+                .star21
+                .star22
+                .star23
+                .star24
+                .star25
+                .star26
+                .star27
+                .star28
+                .star29
+                .star30
             .building
                 .house1
                     .window
