--- a/jade/index.jade
+++ b/jade/index.jade
@@ -7,59 +7,66 @@ html(lang="en")
         link(rel="stylesheet", href="css/style.css")
         title 城市插画
     body
-        .scene
-            .lefttopText
-                .blueblock
-                h5 A DAY<br>ON THE ISLAND
-                h1 Aegean Sea<br>Night Sky
-                p cuilei's project
-            .allstars
-                .star1
-                .star2
-                .star3
-                .star4
-                .star5
-                .star6
-                .star7
-                .star8
-                .star9
-                .star10
-                .star11
-                .star12
-                .star13
-                .star14
-                .star15
-                .star16
-                .star17
-                .star18
-                .star19
-                .star20
-                .star21
-                .star22
-                .star23
-                .star24
-                .star25
-                .star26
-                .star27
-                .star28
-                .star29
-                .star30
-            .building
-                .house1
-                    .window
-                        .circle
-                        .circle
-                        .circle
-                .house2
-                    .door
-                .house3
-                    .wall
+        label
+            .remind click to switch day/night
+            input(type='checkbox')
+            .scene
+                .moon
+                .sun
+                .lefttopText
+                    .blueblock
+                    h5 A DAY<br>ON THE ISLAND
+                    h1 Aegean Sea<br>
+                        span.nightText Night Sky
+                        span.dayText Day Sky
+                    p cuilei's project
+                .allstars
+                    .star1
+                    .star2
+                    .star3
+                    .star4
+                    .star5
+                    .star6
+                    .star7
+                    .star8
+                    .star9
+                    .star10
+                    .star11
+                    .star12
+                    .star13
+                    .star14
+                    .star15
+                    .star16
+                    .star17
+                    .star18
+                    .star19
+                    .star20
+                    .star21
+                    .star22
+                    .star23
+                    .star24
+                    .star25
+                    .star26
+                    .star27
+                    .star28
+                    .star29
+                    .star30
+                .building
+                    .house1
                         .window
-                    .wall
-                        .window
-                    .wall
-                        .window
-                    .roof
-                        .rooftop
-                            .cross
+                            .circle
+                            .circle
+                            .circle
+                    .house2
+                        .door
+                    .house3
+                        .wall
+                            .window
+                        .wall
+                            .window
+                        .wall
+                            .window
+                        .roof
+                            .rooftop
+                                .cross
 
